src/objects/SPE_SurveyQuestion__c.object
<CustomObject>
    <customHelpPage>SPE_QuestionBank_Survey_Help_Page</customHelpPage>
    <description>SurveyQuestion object contains Question banks for the survey.</description>
    <fields>
        <fullName>AnswerType__c</fullName>
        <description>Answer type is required to base on Questions</description>
        <inlineHelpText>Select appropriate type of answer</inlineHelpText>
        <label>Answer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Free Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BUScope__c</fullName>
        <label>Product Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Products</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CategoryScope__c</fullName>
        <label>Category scope</label>
        <picklist>
            <picklistValues>
                <fullName>Category Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Categories</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeoScope__c</fullName>
        <label>Geography Scope</label>
        <picklist>
            <picklistValues>
                <fullName>All Markets</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checkbox is TRUE to show question on survey page.</description>
        <inlineHelpText>It will show question on survey page if it is true</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In order to make question required.</description>
        <inlineHelpText>To show whether question required .</inlineHelpText>
        <label>Is Required ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Translated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Alternate Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxScore__c</fullName>
        <label>Max Score</label>
        <summaryForeignKey>SPE_SurveyAnswer__c.SurveyQuestion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OperationalType__c</fullName>
        <label>Operational Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lagging KPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leading KPI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PIData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Data</label>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>Question Bank</relationshipLabel>
        <relationshipName>Question_Bank</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIDefinition__c</fullName>
        <label>PI Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIType__c</fullName>
        <label>PI Type</label>
        <picklist>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Survey_Question__c</fullName>
        <label>Parent Survey Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuestionAbbreviation__c</fullName>
        <label>Question Abbreviation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionCode__c</fullName>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>QuestionLabel__c</fullName>
        <label>Question Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question Bank</label>
        <referenceTo>SPE_SurveyQuestion__c</referenceTo>
        <relationshipLabel>Alternate Language Question Bank</relationshipLabel>
        <relationshipName>Question_Bank</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Language__c</fullName>
        <label>Alternate Language</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyQueHeaderandSurveyQue__c</fullName>
        <label>Survey Que. Header and Survey Que</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SurveyQuestion__c</fullName>
        <description>Question which will appear on Survey page</description>
        <inlineHelpText>Enter your question</inlineHelpText>
        <label>Survey Question</label>
        <type>TextArea</type>
    </fields>
    <label>Question Bank</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QuestionLabel__c</columns>
        <columns>PIData__c</columns>
        <columns>SurveyQuestion__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Questions ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Bank</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SPE_special_character_not_allowed</fullName>
        <active>true</active>
        <description>Survey Question should be start with Alphanumeric only</description>
        <errorConditionFormula>IF( Is_Translated__c == false,NOT(REGEX(SurveyQuestion__c, &quot;[a-zA-Z 0-9]{1}.*&quot;)), false)</errorConditionFormula>
        <errorMessage>Survey Question should be start with Alphanumeric only</errorMessage>
    </validationRules>
</CustomObject>